--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "loopback-app",
-  "version": "0.0.0",
+  "name": "propman",
+  "version": "1.0.0",
   "main": "server/server.js",
   "scripts": {
     "start": "slc run",
@@ -8,11 +8,12 @@
   },
   "dependencies": {
     "async": "^0.9.0",
+    "cors": "^2.5.2",
     "compression": "^1.0.3",
     "errorhandler": "^1.1.1",
-    "loopback": "^2.0.0",
-    "loopback-boot": "^2.0.0",
-    "loopback-datasource-juggler": "^2.0.0",
+    "loopback": "^2.14.0",
+    "loopback-boot": "^2.6.5",
+    "loopback-datasource-juggler": "^2.19.0",
     "serve-favicon": "^2.0.1"
   },
   "optionalDependencies": {
