--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "loopback": "^2.14.0",
     "loopback-boot": "^2.6.5",
     "loopback-datasource-juggler": "^2.19.0",
-    "loopback-connector-mongodb": "^1.11.3"
+    "loopback-connector-mongodb": "^1.11.3",
     "serve-favicon": "^2.0.1"
   },
   "optionalDependencies": {
